<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Iniciar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/MenuPrincipal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </androidx.appcompat.widget.Toolbar>

    <ImageView

        android:layout_width="335dp"
        android:layout_height="320dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:src="@drawable/restaurantelogo">

    </ImageView>


    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/textfieldCorreo"
        android:layout_width="match_parent"
        android:hint="@string/txtCorreo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_email"
        app:helperText="@string/helpertxtrequerido"
        app:counterEnabled="true"
        app:counterMaxLength="50"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <com.google.android.material.textfield.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:id="@+id/textfieldContraseña"
        android:layout_width="match_parent"
        android:hint="@string/txtContraseña"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:startIconDrawable="@drawable/ic_lock"
        app:endIconMode="password_toggle"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <Button

        android:id="@+id/btnIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onLogin"
        android:text="@string/btnIniciarSesion"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginTop="30dp"
        android:layout_gravity="center">
    </Button>

</LinearLayout>
